--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Esto es muy complicado</h1>
-    <p>Esperando que se actualice</p>
+   
+    <div class="contenedor">
+        <h1>Esto es muy complicado</h1>
+        <p>Esperando que se actualice</p>
+    </div>
 </body>
 </html>
